# Visual-Programing-Node-System

./: .gitignore  README.md  buid.bat  build.bat  pyproject.toml  requirements.txt  取消注册ico.bat  注册ico.bat
editor/: config.py  edge.py  editor.py  main.py  node.py  node_port.py  scene.py  view.py
editor/nodes/: BranchNode.py
editorWnd/: command.py  config.py  dtypes.py  edge.py  editor.py  env.py  group.py  main.py  node.py  node_lib.py  node_port.py  scene.py  view.py  widgets.py
editorWnd/nodes/: ActionNode.py  AddNode.py  BasicCalcNode.py  BranchNode.py  ConverterNode.py  InputNode.py
editorWnd/tools/: tools.py
