[project]
name = "visual-programing-node-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altgraph==0.17.4",
    "packaging==25.0",
    "pefile==2023.2.7",
    "pyinstaller==6.13.0",
    "pyinstaller-hooks-contrib==2025.4",
    "pyside6==6.9.0",
    "pyside6-addons==6.9.0",
    "pyside6-essentials==6.9.0",
    "pywin32-ctypes==0.2.3",
    "setuptools==80.4.0",
    "shiboken6==6.9.0",
]
